// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should return correct slotted anchor styles for component: p-accordion 1`] = `
{
  "@global": {
    "p-accordion a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-banner 1`] = `
{
  "@global": {
    "p-banner a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-carousel 1`] = `
{
  "@global": {
    "p-carousel a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-checkbox-wrapper 1`] = `
{
  "@global": {
    "p-checkbox-wrapper a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-display 1`] = `
{
  "@global": {
    "p-display a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-heading 1`] = `
{
  "@global": {
    "p-heading a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-headline 1`] = `
{
  "@global": {
    "p-headline a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-inline-notification 1`] = `
{
  "@global": {
    "p-inline-notification a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-radio-button-wrapper 1`] = `
{
  "@global": {
    "p-radio-button-wrapper a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-select-wrapper 1`] = `
{
  "@global": {
    "p-select-wrapper a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-switch 1`] = `
{
  "@global": {
    "p-switch a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-table 1`] = `
{
  "@global": {
    "p-table a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-tabs 1`] = `
{
  "@global": {
    "p-tabs a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-text 1`] = `
{
  "@global": {
    "p-text a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-text-field-wrapper 1`] = `
{
  "@global": {
    "p-text-field-wrapper a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-text-list 1`] = `
{
  "@global": {
    "p-text-list a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;

exports[`should return correct slotted anchor styles for component: p-textarea-wrapper 1`] = `
{
  "@global": {
    "p-textarea-wrapper a": {
      "&::-moz-focus-inner": {
        "border": "0 !important",
      },
      "&:focus": {
        "outline": "0 !important",
      },
      "&:focus-visible": {
        "outline": "2px solid #1A44EA !important",
        "outlineOffset": "0 !important",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "background": "rgba(148, 149, 152, .18) !important",
        },
      },
      "borderRadius": "4px !important",
      "color": "currentcolor !important",
      "marginLeft": "-2px !important",
      "marginRight": "-2px !important",
      "paddingLeft": "2px !important",
      "paddingRight": "2px !important",
      "textDecoration": "underline !important",
      "transition": "background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important",
    },
  },
}
`;
